fixing mobile bulb movement overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -516,7 +516,7 @@ body{
     section{
       width: 70vw;
       .switch{
-        width: 80px;
+        width: 72px;
         padding: 0.65vh 1.5vw;
         border-radius: 5vw;
       }
